--- a/templates/movie.html
+++ b/templates/movie.html
@@ -20,12 +20,16 @@
 
     </div>
 
-{#    {% include 'footer.html' %}#}
+    <!-- Make footer span the whole page -->
+
+
 
 
 
 
 </body>
+
+        {% include 'footer.html' %}
 </html>
 
 
