--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -499,7 +499,7 @@
         /* Styling for the movie navigation buttons within the row */
         .movie-navigation-buttons {
             /* Customize button appearance */
-            background-color: #1f8efa;
+            background-color: #19c20c;
             color: #ffffff;
             border: none;
             padding: 4px 6px;
@@ -554,7 +554,10 @@
   right: 0; /* Stick to the right side */
 }
 
-
+ /* Custom style for bottom margin of the cast list */
+        .cast-list-margin {
+            margin-bottom: 300px; /* Adjust the value as needed */
+        }
 
     </style>
 
@@ -703,7 +706,10 @@
         </div>
     </div>
 
-    <div class="info-box">
+
+
+    <div class="cast-list-margin">
+    <div class="info-box mb-100">
         <div class="cast-list">
             <!-- Create a new flexbox container for the cast -->
             <div class="d-flex flex-nowrap">
@@ -739,7 +745,10 @@
     <!-- Existing HTML ... -->
 
 
+
 </div>
+
+
 </div>
 
 
