--- a/templates/footer.html
+++ b/templates/footer.html
@@ -54,7 +54,7 @@
         <!-- Footer Menu-->
         <div class="footer_menu">
             <ul>
-                <li>Email us: <a href="mailto:team@nextreel.com">team@nxtreel.com</a></li>
+                <li>Email us: <a href="mailto:bryce@nxtreel.com">bryce@nxtreel.com</a></li>
             </ul>
         </div>
     </div>
