--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
 
                 <!-- Added btn-logo class to the anchor tag wrapping the image -->
                 <a href="{{ url_for('home') }}" class="btn btn-logo">
-                    <img src="{{ url_for('static', filename='nextreel_tentative_logo_nobg.png') }}">
+                    <img src="{{ url_for('static', filename='nextreel-wbg.png') }}">
                 </a>
             </div>
 
