--- a/static/styles/navbar.css
+++ b/static/styles/navbar.css
@@ -4,7 +4,7 @@
 
         /* Custom button styles */
         .btn-custom {
-            background-color: #19c20c !important;
+            background-color: #2bb030 !important;
             color: #ffffff !important;
             border: none;
             margin-right: 15px;
@@ -13,7 +13,7 @@
 
         /* Hover effect for custom buttons */
         .btn-custom:hover {
-            background-color: #19c20c;
+            background-color: #2bb030;
         }
 
         /* Custom logo button styles */
@@ -35,10 +35,10 @@
 
     /* Styling for the logo image */
     .navbar img {
-        max-height: 200px;  /* Adjust as needed */
-        max-width: 200px;  /* Adjust as needed */
+        max-height: 150px;  /* Adjust as needed */
+        max-width: 150px;  /* Adjust as needed */
         /*display: inline;  !* Ensure image is block-level *!*/
-        margin-top: -25px;
+        /*margin-top: -25px;*/
 
 
 
