--- a/templates/movie.html
+++ b/templates/movie.html
@@ -4,32 +4,31 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+
+<style>
+
+
+</style>
+
+
 <body>
-
-
-
 
     <!-- Include the navbar.html content -->
     {% include 'navbar.html' %}
 
     <!-- Main Content -->
-    <div class="container">
+    <div class="container ">
 
         <!-- Include the movie_card.html content -->
         {% include 'movie_card.html' %}
 
     </div>
 
-    <!-- Make footer span the whole page -->
-
-
-
-
-
-
+       {% include 'footer.html' %}
 </body>
 
-        {% include 'footer.html' %}
+
 </html>
 
 
