--- a/templates/footer.html
+++ b/templates/footer.html
@@ -26,7 +26,7 @@
                         <p>Nextreel 2023</p>
                         <ul>
                             <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">DMCA</a></li>
+                                <li><a href="#">About Us</a></li>
 
                         </ul>
 
