--- a/templates/footer.html
+++ b/templates/footer.html
@@ -25,8 +25,8 @@
                         <div class="footer-logo mb-3"></div>
                         <p>Nextreel 2023</p>
                         <ul>
-                            <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">About Us</a></li>
+{#                            <li><a href="#">Privacy Policy</a></li>#}
+{#                                <li><a href="#">About Us</a></li>#}
 
                         </ul>
 
@@ -36,13 +36,14 @@
                 <div class="col-12 col-sm-6 col-lg">
                     <div class="single-footer-widget section_padding_0_130">
                         <!-- Widget Title-->
-                        <h5 class="widget-title">About</h5>
+                        <h5 class="widget-title"></h5>
                         <!-- Footer Menu-->
-                        <div class="footer_menu">
                             <ul>
                                 <li><a href="#">About Us</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">DMCA</a></li>
                             </ul>
-                        </div>
+
                     </div>
                 </div>
 
@@ -53,6 +54,7 @@
         <h5 class="widget-title">Contact</h5>
         <!-- Footer Menu-->
         <div class="footer_menu">
+
             <ul>
                 <li>Email us: <a href="mailto:bryce@nxtreel.com">bryce@nxtreel.com</a></li>
             </ul>
