should be working with new db config from stackhero

--- a/templates/set_filters.html
+++ b/templates/set_filters.html
@@ -160,6 +160,9 @@
     </script>
 </head>
 
+{#{% include 'navbar.html' %}#}
+
+
 <body>
 
 
@@ -168,7 +171,6 @@
 <!-- Main Content Container -->
 <!-- This is the main content container. It is using Bootstrap's container-fluid class for a full-width container. -->
 <div class="container-fluid"> <!-- .container-fluid style applied here -->
-{% include 'navbar.html' %}
     <!-- Card Container -->
     <!-- This is a Bootstrap card component. It's a flexible and extensible content container with multiple variants and options. -->
     <div class="card mx-auto"> <!-- .card and max-width style applied here -->
