--- a/templates/card_deck.html
+++ b/templates/card_deck.html
@@ -28,7 +28,7 @@
         <div class="row justify-content-center mb-4">
             <!-- Suggest Me Movie Button -->
             <div class="col-auto">
-                <a class="btn btn-next-movie" href="{{ url_for('movie') }}" role="button">Pick a random movie</a>
+                <a class="btn btn-next-movie" href="{{ url_for('next_movie') }}" role="button">Pick a random movie</a>
             </div>
             <!-- Set Filters Button -->
             <div class="col-auto">
