background images now showing with page rendering

--- a/templates/movie_card.html
+++ b/templates/movie_card.html
@@ -402,7 +402,7 @@
             z-index: -1;          /* Place it behind the content */
 
             /* Your background settings */
-            background-image: url('https://image.tmdb.org/t/p/original{{ movie.backdrop_path }}');
+            background-image: url('https://image.tmdb.org/t/p/original{{ movie.backdrop_url }}');
             background-size: cover;  /* Stretch the image to cover the entire container */
             {#background-position: top -250px;  /* Align the image to the top of the container */#}
             background-position: top;  /* Align the image to the top of the container */
