updating css and html to use relative sizing instead of px

--- a/static/styles/navbar.css
+++ b/static/styles/navbar.css
@@ -40,7 +40,7 @@
     max-height: 6.25vh; /* 100px approximation to vh */
     color: #343a40;
     background-color: #02243f;
-    display: inline;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     flex-grow: 1;
