--- a/templates/header.html
+++ b/templates/header.html
@@ -21,8 +21,7 @@
         .full-width-element {
             font-family: 'Merriweather', serif;
             font-weight: 700;
-            font-size:20px;
-
+            font-size: 1.25rem; /* 20px -> 1.25rem (20 / 16) */
             align-items: center;
             text-align: center;
             color: rgba(50, 50, 50, 0.7);
@@ -38,9 +37,8 @@
      display: flex;  /* Enable Flexbox */
     flex-direction: column;  /* Stack children vertically */
     justify-content: flex-end;  /* Align children at the bottom */
-                align-items: center;
-    min-height: 600px;
-
+    align-items: center;
+    min-height: 37.5rem;
 
 }
 
