--- a/templates/home.html
+++ b/templates/home.html
@@ -28,6 +28,7 @@
             margin: 0 !important;  /* Override margin */
             box-shadow: none;      /* Remove shadow */
             border-radius: 0;      /* Remove rounded corners */
+            height: 100%;
         }
 
     </style>
