changed header and navbar to be more responsive

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,63 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Include Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Include Merriweather Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap">
-    <!-- Include External CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/header.css') }}">
-    <!-- Include Backdrop Gradient CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/backdrop_gradient.css') }}"> <!-- New Line -->
-    <!-- Add Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/backdrop_gradient.css') }}">
 
     <style>
-        /* Apply Merriweather font to elements with .full-width-element class */
         .full-width-element {
             font-family: 'Merriweather', serif;
             font-weight: 700;
-            font-size: 1.25rem; /* 20px -> 1.25rem (20 / 16) */
-            align-items: center;
+            font-size: 1.25rem; /* Responsive font size */
             text-align: center;
             color: rgba(50, 50, 50, 0.7);
-            vertical-align:baseline;
+            vertical-align: baseline;
             position: relative;
             z-index: 2;
-
         }
 
-
-
-.backdrop-container {
-     display: flex;  /* Enable Flexbox */
-    flex-direction: column;  /* Stack children vertically */
-    justify-content: flex-end;  /* Align children at the bottom */
-    align-items: center;
-    min-height: 37.5rem;
-
-}
-
-
-
-
+        .backdrop-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            min-height: 37.5rem; /* Responsive height */
+            background-image: url('https://image.tmdb.org/t/p/original/dMrAwwB7PMC4SjgsTbgmEJblaYd.jpg');
+            background-size: cover; /* Ensure background covers the entire container */
+            background-position: center; /* Center the background image */
+        }
     </style>
 </head>
 <body>
 
-
-
-<!-- Wrapper div for setting the background -->
-<div class="backdrop-container" style="background-image: url('https://image.tmdb.org/t/p/original/dMrAwwB7PMC4SjgsTbgmEJblaYd.jpg');">
+<div class="backdrop-container">
     <div class="container">
-        <!-- Your existing content -->
         <div class="full-width-element">
-            <!-- Text here will use the Merriweather font -->
             <div class="row justify-content-center">
-    <div class="col-lg-10 mb-4 text-center"> <!-- Added text-center -->
+                <div class="col-lg-10 mb-4 text-center">
                     <p>Welcome.</p>
                     <p>Discover new films based on criteria defined by you.</p>
                 </div>
@@ -67,15 +50,10 @@
     </div>
 </div>
 
-
-<!-- Including card_deck.html -->
 {% include 'card_deck.html' %}
 
-
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
