--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-
-    <!-- Import Merriweather font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap">
-
-    <!-- Other CSS files -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
+    <!-- Updated Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
-
     <style>
-        /* Set the font for the entire document */
         body {
             font-family: 'Merriweather', serif;
         }
-
-        /* Custom class to make the header span the entire width of the page */
         .header-full-width {
-            width: 100%;           /* Full width */
-            padding: 0 !important; /* Override padding */
-            margin: 0 !important;  /* Override margin */
-            box-shadow: none;      /* Remove shadow */
-            border-radius: 0;      /* Remove rounded corners */
+            width: 100%;
+            padding: 0 !important;
+            margin: 0 !important;
+            box-shadow: none;
+            border-radius: 0;
             height: 100%;
         }
-
     </style>
 </head>
-
 <body>
 
 {% include 'navbar.html' %}
 
 <div class="container">
-    <!-- Make header span the whole page -->
     <div class="container-fluid header-full-width">
         {% include 'header.html' %}
     </div>
 </div>
 
-<!-- Make footer span the whole page -->
 <div class="container-fluid header-full-width">
     {% include 'footer.html' %}
 </div>
 
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
