--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,7 +23,7 @@
             <div class="button-wrapper">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="/movie" class="btn btn-custom">Pick a Movie</a>
+                        <a href="/next_movie" class="btn btn-custom">Pick a Movie</a>
                     </li>
                     <li class="nav-item">
                         <a href="/setFilters" class="btn btn-custom">Set Filters</a>
